--- a/index.css
+++ b/index.css
@@ -1,11 +1,20 @@
-h1{
-    color: red;
+body{
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
 }
 
-#bar{
-    color: palegreen;
+#menu iframe{
+    width: 18%;
+    height: 100%;
+    float: left;
 }
 
-.foo{
-    font-weight: 500;
+
+#main iframe{
+    width: 82%;
+    height: 100%;
 }
+
+
+
